# dactyl-keyboard

./: .bazelrc  .gitignore  BUILD  BUILD.bazel  MODULE.bazel  README.keyboard.md  README.md  WORKSPACE  requirements.txt  requirements_lock.txt  requirements_windows.txt
.devcontainer/: devcontainer.json
.github/workflows/: build.yaml  main.yml
src/: BUILD  BUILD.bazel  dactyl.bzl  dactyl_manuform.py  defs.bzl  generate_configuration.py  generate_configuration_mklasklasd.py  generate_configuration_orbyl_test.py  generate_configuration_test.py  helpers_cadquery.py  model_builder.py  step_format.py
src/dactyl/: BUILD  common.clj  generator.clj  lightcycle.clj  manuform.clj  util.clj
src/server/: BUILD  handler.clj  main.clj
src/server/resources/: example.html  index.html  json-help.html  lightcycle.html  manuform.html  wrapper.html
src/server/resources/public/: lightcycle.json  main.css  normalize.css
