load("@rules_python//python:defs.bzl", "py_binary")
load("@pip//:requirements.bzl", "requirement")
load("//src:dactyl.bzl", "dactyl_manuform", "generate_config")

py_binary(
    name = "dactyl_manuform",
    srcs = [
        "dactyl_manuform.py",
        "generate_configuration.py",
        "helpers_cadquery.py",
    ],
    data = glob(["parts/*"]),
    visibility = ["//visibility:public"],
    deps = [
        requirement("absl-py"),
        requirement("numpy"),
        requirement("scipy"),
        # Loading cadquery's dep cadquery-ocp fails in bazel with an error like:
        #     AssertionError: In cadquery_ocp-7.6.3a0-cp39-cp39-manylinux_2_31_x86_64.whl, LICENSES_bundled.txt is not mentioned in RECORD
        # so for now just make sure it's already installed on the host. :(

        # or on windows:
        #   File "c:\users\klein\_bazel_klein\jonudlmy\execroot\_main\bazel-out\x64_windows-opt-exec-2b5cbbc6\bin\src\dactyl_manuform.exe.runfiles\rules_python~0.27.0~pip~pip_311_cadquery\site-packages\cadquery\occ_impl\geom.py", line 5, in <module>
        #     from OCP.gp import (
        # ImportError: DLL load failed while importing OCP: The filename or extension is too long.
        requirement("cadquery"),
    ],
)

py_binary(
    name = "model_builder",
    srcs = ["model_builder.py"],
)

py_binary(
    name = "generate_configuration",
    srcs = ["generate_configuration.py"],
    deps = [requirement("absl-py")],
)

generate_config(
    name = "configuration_default",
    bin = ":generate_configuration",
)

dactyl_manuform(
    name = "default",
    outs = [
        # Pre-declare outputs used by GitHub Action directly
        "default_right.svg",
        "default_left.stl",
        "default_left_plate.stl",
        "default_right.stl",
        "default_right_plate.stl",
    ],
    config = ":configuration_default",
)

py_binary(
    name = "generate_configuration_mklasklasd",
    srcs = ["generate_configuration_mklasklasd.py"],
    deps = [requirement("absl-py")],
)

generate_config(
    name = "configuration_mklasklasd",
    bin = ":generate_configuration_mklasklasd",
)

# dactyl_manuform(
#     name = "mklasklasd",
#     config = ":configuration_mklasklasd",
# )

py_binary(
    name = "generate_configuration_orbyl_test",
    srcs = ["generate_configuration_orbyl_test.py"],
    deps = [requirement("absl-py")],
)

generate_config(
    name = "configuration_orbyl_test",
    bin = ":generate_configuration_orbyl_test",
)

# dactyl_manuform(
#     name = "orbyl_test",
#     config = ":configuration_orbyl_test",
# )

py_binary(
    name = "generate_configuration_test",
    srcs = ["generate_configuration_test.py"],
    deps = [requirement("absl-py")],
)

generate_config(
    name = "configuration_test",
    bin = ":generate_configuration_test",
)

dactyl_manuform(
    name = "test",
    config = ":configuration_test",
    defaults = True,
)

py_binary(
    name = "step_format",
    srcs = ["step_format.py"],
    visibility = ["//visibility:public"],
    deps = [
        requirement("absl-py"),
        requirement("cadquery"),
    ],
)
